[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/CodeSnippetPopup/TextEditPopupPanel.gd" type="Script" id=1]

[node name="TextEditPopupPanel" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
window_title = "Snippet Editor"
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1016.0
margin_bottom = 31.0
text = "INI-style structure. The [section] is the snippet name. \"body\" is the only key which has to be defined. Use [@X], where X is an integer, to mark the position(s) the cursor jumps to when pressing the shortcut after insertion. The order of the numbers will be respected. If you use a number multiple times, the code you used for the first X will be mirrored to the other markers. You can add a placeholder and dropdown options like this [@1:Option1,Option2].
Press Esc while the choice options isn't visible, will abort the jumping."
autowrap = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 35.0
margin_right = 1016.0
margin_bottom = 553.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 10
custom_constants/margin_left = 5

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/MarginContainer"]
margin_left = 5.0
margin_top = 10.0
margin_right = 1011.0
margin_bottom = 518.0
highlight_current_line = true
draw_tabs = true
smooth_scrolling = true
wrap_enabled = true
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 418.0
margin_top = 557.0
margin_right = 598.0
margin_bottom = 592.0
rect_min_size = Vector2( 0, 35 )
size_flags_horizontal = 4
custom_constants/separation = 50

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_top = 7.0
margin_right = 65.0
margin_bottom = 27.0
rect_min_size = Vector2( 65, 0 )
size_flags_vertical = 4
text = "Cancel"

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 115.0
margin_top = 7.0
margin_right = 180.0
margin_bottom = 27.0
rect_min_size = Vector2( 65, 0 )
size_flags_vertical = 4
text = "Save"
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
